--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+
+  flutter_staggered_grid_view: "^0.3.2"
+
   flutter:
     sdk: flutter
 
