--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,11 @@ dependencies:
   dio: 3.0.10
   provider: ^3.1.0
   flutter_staggered_grid_view: "^0.3.2"
+  flutter_webview_plugin: ^0.3.10+1
+  firebase_core: ^0.4.5
+  firebase_auth: ^0.16.1
+  flutter_signin_button: ^1.1.0
+  flutter_login_facebook: ^0.4.0+1
 
   flutter:
     sdk: flutter
