--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  dio: 3.0.10
+  dio: ^3.0.10
   provider: ^3.1.0
   flutter_staggered_grid_view: "^0.3.2"
   flutter_webview_plugin: ^0.3.10+1
