Launcher icon added
Added laucher icon

Added a new component that handles icons for IOS and Android
Added new assets to be used as bottom tab icons

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="eyes_of_rovers"
+        android:label="Eyes Of Rovers"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
